2006-06-02  Jon A. Cruz  <jon@joncruz.org>

	* trace/siox.cpp:

	  Applied patch #1500659.

2006-06-02  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.h, src/dialogs/layers-panel.cpp:

	  Blocked signal when changes are not from the layers UI.
	  Fixes bug #1495406.

2006-06-02  Colin Marquardt  <colin@marquardt-home.de>

	* TRANSLATORS: Add Stefan Graubner.

2006-06-01  Jon A. Cruz  <jon@joncruz.org>

	* src/extension/internal/pdf-mini.h

	  Fix for delete[] mismatch and binary tweak from Ulf Erikson.

2006-06-01  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.h, src/dialogs/layers-panel.cpp:

	  Added layer opacity slider.
	  Fixes RFE #1496569.

2006-05-31  Colin Marquardt  <colin@marquardt-home.de>

	* TRANSLATORS: Add vonHalenbach for tutorial translations.

2006-05-29  Jon A. Cruz  <jon@joncruz.org>

	* src/extension/internal/odf.cpp:
	Corrected deletes and uninitizlied variables.
	Fixes bug# 1489961.

2006-05-30 John Cliff <simarilius@yahoo.com>
	src/trace/potrace/inkscape-potrace.cpp
	Changed bitsPerSample from hardcoded to calculated for multi color traces
	to fix bugs 1188811 and 1484076

2006-05-29  Jon A. Cruz  <jon@joncruz.org>

	* src/xml/repr-io.cpp:
	Changed to strip leading BOM from input.
	Fixes bug# 1121666.

2006-05-29  Bryce <bryce@bryceharrington.org>
	* sp-shape.cpp:  Adding documentation

2006-05-29  Jon A. Cruz  <jon@joncruz.org>

	* src/desktop.cpp, src/layer-manager.cpp, src/dialogs/layers-panel.cpp:
	Workaround to avoid assertion upon file revert.

2006-05-28  Bryce <bryce@bryceharrington.org>
	* sp-marker.cpp:  Adding documentation

2006-05-28  MenTaLguY  <mental@rydia.net>

	* src/dialogs/clonetiler.cpp, src/dialogs/iconpreview.cpp,
	  src/dialogs/stroke-style.cpp, src/display/curve.cpp,
	  src/display/sp-canvas.cpp, src/dyna-draw-context.cpp,
	  src/extension/internal/gnome.cpp, src/extension/internal/pdf.cpp,
	  src/extension/internal/ps.cpp, src/extension/internal/win32.cpp,